; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/catalog/extr_dependency.c_performDeletion.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/catalog/extr_dependency.c_performDeletion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DependRelationId = common dso_local global i32 0, align 4
@RowExclusiveLock = common dso_local global i32 0, align 4
@DEPFLAG_ORIGINAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @performDeletion(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* @DependRelationId, align 4
  %10 = load i32, i32* @RowExclusiveLock, align 4
  %11 = call i32 @table_open(i32 %9, i32 %10)
  store i32 %11, i32* %7, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @AcquireDeletionLock(i32* %12, i32 0)
  %14 = call i32* (...) @new_object_addresses()
  store i32* %14, i32** %8, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* @DEPFLAG_ORIGINAL, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32*, i32** %8, align 8
  %19 = call i32 @findDependentObjects(i32* %15, i32 %16, i32 %17, i32* null, i32* %18, i32* null, i32* %7)
  %20 = load i32*, i32** %8, align 8
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* %6, align 4
  %23 = load i32*, i32** %4, align 8
  %24 = call i32 @reportDependentObjects(i32* %20, i32 %21, i32 %22, i32* %23)
  %25 = load i32*, i32** %8, align 8
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @deleteObjectsInList(i32* %25, i32* %7, i32 %26)
  %28 = load i32*, i32** %8, align 8
  %29 = call i32 @free_object_addresses(i32* %28)
  %30 = load i32, i32* %7, align 4
  %31 = load i32, i32* @RowExclusiveLock, align 4
  %32 = call i32 @table_close(i32 %30, i32 %31)
  ret void
}

declare dso_local i32 @table_open(i32, i32) #1

declare dso_local i32 @AcquireDeletionLock(i32*, i32) #1

declare dso_local i32* @new_object_addresses(...) #1

declare dso_local i32 @findDependentObjects(i32*, i32, i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @reportDependentObjects(i32*, i32, i32, i32*) #1

declare dso_local i32 @deleteObjectsInList(i32*, i32*, i32) #1

declare dso_local i32 @free_object_addresses(i32*) #1

declare dso_local i32 @table_close(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
